# history-explorer

./: .env.example  .gitignore  CLAUDE.md  plan.md  pyproject.toml
.playwright-mcp/: page-2026-06-09T22-28-32-623Z.yml  page-2026-06-09T22-28-38-730Z.yml  page-2026-06-09T22-32-05-569Z.yml  page-2026-06-09T22-40-24-173Z.yml  page-2026-06-09T22-47-54-116Z.yml  page-2026-06-09T22-48-12-725Z.yml
config/: settings.py  urls.py
documents/: data-model.md  navigation-and-ux.md  overview.md  visualization.md
explorer/: admin.py  models.py  urls.py  views.py
explorer/management/commands/: ai_seed.py  fetch_images.py  geocode_entities.py  seed_french_napoleon.py  seed_romanov.py
explorer/migrations/: 0001_initial.py  0002_event_latitude_event_longitude_event_region_and_more.py
explorer/templatetags/: explorer_tags.py
k8s/: deployment.yaml  setup.sh
static/css/: site.css
templates/: 404.html  500.html  base.html
templates/explorer/: _breadcrumb.html  connection_detail.html  era_overview.html  event_detail.html  galaxy.html  globe.html  period_detail.html  person_detail.html  timeline.html
